graficas mejor presentables

--- a/metricas/templates/metricas/index.html
+++ b/metricas/templates/metricas/index.html
@@ -1862,7 +1862,7 @@
             });
 
             const layout = {
-                title: 'Gráfico de Tendencia de Cumplimiento SLA',
+                title: 'Grafico de Tendencia de Cumplimiento SLA',
                 xaxis: {
                     title: 'Periodo',
                     type: 'category' // Tratar periodos como categorías
